1. Card set up and clean up